<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.amap.navi.daohang.User.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="17dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/register_txt1"
            android:textColor="@color/base_color_text_gray"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/register_txt2"
            android:textColor="@color/color_theme"
            android:textSize="20sp"
            android:background="#00000000"
            android:backgroundTint="@color/base_bg"
            android:elevation="23dp" />

    </LinearLayout>

    <TextView
        android:text="登录"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1"
        android:orientation="vertical"
        android:layout_marginTop="85dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input_bg"
            android:orientation="vertical"
            android:weightSum="1">

            <EditText
                android:id="@+id/et_username"
                android:inputType="text"
                android:maxLines="1"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/login_icon_account"
                android:drawablePadding="25dip"
                android:hint="@string/login_username_hint"
                android:paddingLeft="15dip"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="0.0"
                android:textColorHint="#ffdddddd"
                android:layout_weight="4.86"
                android:layout_width="match_parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/base_horization_line" />

            <EditText
                android:id="@+id/et_password"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/login_icon_password"
                android:drawablePadding="25dip"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="15dip"
                android:textColorHint="#ffdddddd"
                android:selectAllOnFocus="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/base_horization_line" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />

        <Button
            android:layout_width="348dp"
            android:text="忘记密码？"
            android:layout_height="38dp"
            android:gravity="right"
            android:id="@+id/wangjimima"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:textColor="@color/color_theme"
            android:textSize="15sp"
            android:background="#00000000"
            android:backgroundTint="@color/base_bg"
            android:layout_weight="0.70" />
    </LinearLayout>


</RelativeLayout>
